style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100%;
  padding: 20px 0px;
  font-family: 'Source Code Pro', monospace;
  background-color: #272727;
  counter-reset: codelines;
}

h3 {
  text-align: center;
  color: #00d742;
  margin-bottom: 20px;
}

#tryMeButton {
  display: block;
  width: 60%;
  margin: 20px auto;
  color: white;
  background-color: tomato;
  text-transform: uppercase;
  padding: 10px;
  font-size: 1.5em;
  border: none;
}

.fakeButtons {
  height: 10px;
  width: 10px;
  border-radius: 50%;
  border: 1px solid #000;
  position: relative;
  top: 3px;
  left: 10px;
  background-color: #ff3b47;
  border-color: #9d252b;
  display: inline-block;
}

.fakeMinimize {
  left: 11px;
  background-color: #ffc100;
  border-color: #9d802c;
}

.fakeZoom {
  left: 16px;
  background-color: #00d742;
  border-color: #049931;
}

.fakeMenu {
  width: 98%;
  height: 25px;
  background-color: #bbb;
  margin: 0 auto;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.fakeScreen {
  width: 98%;
  margin: 0 auto;
  padding: 20px 2px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  background-color: #151515;
  min-height: 70vh;
}

.fakeScreen > div {
  color: #00d742;
  counter-increment: codelines;
}

.fakeScreen > div > p {
  display: inline-block;
  position: absolute;
  width: 85%;
  overflow-x: auto;
  scrollbar-width: none;
}

.fakeScreen > div::before {
  content: counter(codelines);
  display: inline-block;
  color: wheat;
  text-align: right;
  width: 30px;
  border-right: 1px solid powderblue;
  padding-right: 10px;
  margin-right: 15px;
}

./*fakeScreen > div:nth-child(n)::before {
  content: counter(codelines);
}

.fakeScreen > div:nth-child(n+10)::before {
  content: counter(codelines);
}

.fakeScreen > div:nth-child(n+100)::before {
  content: counter(codelines);
}

.fakeScreen > div:nth-child(n+1000)::before {
  content: counter(codelines);
}*/

